# CoreLibrary

./: .gitignore  BoundedBuffer.hpp  CMakeLists.txt  ConcurrentQueue.hpp  CoreLibrary.code-workspace  CsvGrid.hpp  CustomException.hpp  DebugLog.hpp  DebugLogging.hpp  GenericSorting.hpp  IniFile.hpp  MessageQueueThread.hpp  README  README.md  SimpleTcpClient.hpp  SimpleTcpServer.hpp  StringUtils.hpp  SyncEvent.hpp  TcpTypedClient.hpp  TcpTypedServer.hpp  ThreadBase.hpp  ThreadGroup.hpp  ThreadedLogger.hpp  build_linux_64bit_release.sh  build_msvc2022_64bit_release.bat
Asio/: AsioDefines.hpp  IOServiceThreadGroup.hpp  IoServiceThreadGroup.cpp  IoServiceThreadGroup.hpp  MessageUtils.cpp  MessageUtils.hpp  SimpleTcpClient.cpp  SimpleTcpServer.cpp  TcpClient.cpp  TcpClient.hpp  TcpConnection.cpp  TcpConnection.hpp  TcpConnections.cpp  TcpConnections.hpp  TcpServer.cpp  TcpServer.hpp  TcpTypedClient.cpp  TcpTypedServer.cpp
CsvGrid/: CsvGrid.cpp  CsvGridCell.cpp  CsvGridCell.hpp  CsvGridMain.cpp  CsvGridMain.hpp  CsvGridRow.cpp  CsvGridRow.hpp
DebugLog/: DebugLog.cpp  DebugLog.hpp  DebugLogSingleton.hpp
Exceptions/: CustomException.cpp  CustomException.hpp
Include/: CoreLibraryDllGlobal.h
Include/Asio/: AsioCompatibility.hpp  AsioDefines.h  AsioDefines.hpp  IoContextThreadGroup.h  IoServiceThreadGroup.h  IoServiceThreadGroup.hpp  MemoryUtils.h  MemoryUtils.hpp  MessageUtils.h  MessageUtils.hpp  MulticastReceiver.h  MulticastSender.h  MulticastTypedSender.h  NetworkUtils.h  Ping.h  SerialPort.h  SimpleMulticastReceiver.h  SimpleMulticastSender.h  SimpleTcpClient.h  SimpleTcpClient.hpp  SimpleTcpClientList.h  SimpleTcpServer.h  SimpleTcpServer.hpp  SimpleUdpReceiver.h  SimpleUdpReceiver.hpp  SimpleUdpSender.h  SimpleUdpSender.hpp  TcpClient.h  TcpClient.hpp  TcpClientList.h  TcpConnection.h  TcpConnection.hpp  TcpConnections.h  TcpConnections.hpp  TcpServer.h  TcpServer.hpp  TcpTypedClient.h  TcpTypedClient.hpp  TcpTypedServer.h  TcpTypedServer.hpp  (+6 more)
Include/Comparison/: FloatCompare.hpp
Include/CsvGrid/: CsvGrid.h  CsvGrid.hpp  CsvGridCell.h  CsvGridCell.hpp  CsvGridCellDouble.h  CsvGridMain.h  CsvGridMain.hpp  CsvGridRow.h  CsvGridRow.hpp
Include/DebugLog/: DebugLog.h  DebugLog.hpp  DebugLogSingleton.h  DebugLogSingleton.hpp  DebugLogging.h  DebugLogging.hpp
Include/Exceptions/: CustomException.h  CustomException.hpp  DetailedException.h
Include/FileUtils/: FileUtils.h  SelectFileSystemLibrary.hpp
Include/IniFile/: IniFile.h  IniFile.hpp  IniFileLines.h  IniFileLines.hpp  IniFileSectionDetails.h  IniFileSectionDetails.hpp
Include/LokiPatch/: LokiSingleton.hpp
Include/Maths/: Rounding.hpp
Include/Platform/: PlatformDefines.h
Include/Serialization/: SerializationIncludes.h  SerializationIncludes.hpp  SerializationMacros.h  SerializeToVector.h  SerializeToVector.hpp
Include/Singleton/: ManagedSingleton.hpp
Include/Sorting/: GenericSorting.h  GenericSorting.hpp
Include/StringUtils/: StringUtils.h  StringUtils.hpp
Include/Threads/: BoundedBuffer.h  BoundedBuffer.hpp  ConcurrentQueue.h  ConcurrentQueue.hpp  ConcurrentQueue2.hpp  DeadlineTimer.h  EventThread.h  JoinThreads.h  JoinThreads.hpp  MessageQueueThread.h  MessageQueueThread.hpp  MutexHelpers.hpp  SyncEvent.h  SyncEvent.hpp  ThreadBase.h  ThreadBase.hpp  ThreadGroup.h  ThreadGroup.hpp  ThreadPriority.h  ThreadRunner.h
Include/cereal/: Version.txt
IniFile/: IniFile.cpp  IniFileLines.cpp  IniFileLines.hpp  IniFileSectionDetails.cpp  IniFileSectionDetails.hpp
Logger/: LogFormatters.cpp  LogFormatters.hpp  MessageLogErrors.hpp  ThreadedLogger.cpp
QtProject/: .qmake.stash  CoreLibrary.pro  CoreLibraryDll.pro  CoreLibraryDll.pro.user.4.9-pre1  CoreLibraryDll_resource.rc  Makefile  Makefile.Debug  Makefile.Release
Serialization/: SerializationIncludes.hpp  SerializeToVector.hpp
Sorting/: GenericSorting.cpp
Source/Asio/: Ping.cpp  (+22 more)
StringUtils/: StringUtils.cpp
Threads/: ConcurrentQueue.cpp  JoinThreads.hpp  MessageQueueThread.cpp  SyncEvent.cpp  ThreadBase.cpp  ThreadGroup.cpp
UnitTests/GoogleTests/: CMakeLists.txt  build_linux_64bit_debug.sh  build_linux_64bit_release.sh  build_msvc2022_64bit_debug.bat  build_msvc2022_64bit_release.bat  gtest_cout.h  test.fbs  test.flatbuffer_gen.bat  test.flatbuffer_gen.sh  test.pb.cc  test.pb.h  test.proto  test.proto.bat  test.proto.sh  test.proto_gen.bat  test.proto_gen.sh  test_generated.h  tst_AsioSerialTest.cpp  tst_AsioTest.cpp  tst_CsvGridTest.cpp  tst_DebugLogTest.cpp  tst_FileUtilsTest.cpp  tst_GenericSortingTest.cpp  tst_GoogleFlatBuffersTest.cpp  tst_GoogleProtoBufTest.cpp  tst_IniFileTest.cpp  tst_ManagedSingleton.cpp  tst_SerializationUtilsTest.cpp  tst_StringUtilsTest.cpp  tst_ThreadsTest.cpp  tst_float_compare.cpp
UnitTests/GoogleTests/QtProject/: .qmake.stash  CoreLibraryTests.pro  CoreLibraryTests.pro.user.4.9-pre1  CoreLibraryTestsProtobuf.pro  CoreLibraryTestsProtobuf.pro.user.4.9-pre1  Makefile  Makefile.Debug  Makefile.Release
UnitTests/GoogleTests/QtProject/debug/x64/: CoreLibraryTests.exp  CoreLibraryTests.lib
UnitTests/GoogleTests/QtProject/debug/x86/: CoreLibraryTests.exp  CoreLibraryTests.lib
UnitTests/GoogleTests/QtProject/release/: CoreLibraryTests  CoreLibraryTestsProtobuf
UnitTests/GoogleTests/QtProject/release/x64/: CoreLibraryTests.exp  CoreLibraryTests.lib
UnitTests/GoogleTests/QtProject/release/x86/: CoreLibraryTests.exp
UnitTests/GoogleTests/data/: test_file_2.ini  test_file_5.ini  test_file_6.ini  test_file_check.ini
UnitTests/GoogleTests/linux/: CoreLibraryTests.pro
UnitTests/GoogleTests/msvc/CoreLibraryTests/: CoreLibraryTests.sln  CoreLibraryTests.vcxproj  ReadMe.txt
UnitTests/GoogleTests/qt_msvc2013_64/: CoreLibraryTests.pro
UnitTests/GoogleTests/qt_msvc2015_32/: CoreLibraryTests.pro
UnitTests/GoogleTests/qt_msvc2015_64/: CoreLibraryTests.pro
UnitTests/GoogleTests/win/: CoreLibraryTests.pro
UnitTests/GoogleTests/win64/: CoreLibraryTests.pro
docs/: Doxyfile  Doxyfile.bak
msvc/: CoreLibrary.sln  CoreLibrary.vcxproj  CoreLibrary.vcxproj.filters  ReadMe.txt
qt_custom_mkspecs/: ReadMe.txt
(+5484 files in other folders)
